[project]
name = "claude-agent-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "anthropic>=0.75.0",
    "fastapi>=0.123.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
