[project]
name = "claude-agent-control"
version = "0.3.0"
description = "A fullstack Python application for creating, monitoring, and managing Claude AI agents with Agent Skills and streaming support"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "anthropic>=0.75.0",
    "fastapi>=0.123.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "websockets>=15.0.1",
]
